# ai-root-organizing

./: .gitattributes  .gitignore  AI-IDEAS.md  AI-RESOURCES.md  AI-TODOs.md  CLAUDE.md  HELPFUL_NOTES.md  extract_pdf.py
.claude/: settings.json  settings.local.json
.claude/hooks/: export-session.py
.claude/transcripts/: session_20251221_203629.md  session_20251221_215612.md  session_20251222_160343.md  session_20251222_160550.md  session_20251223_133930.md  session_20251226_215428.md  session_20251226_231616.md  session_20251227_011308.md  session_20251227_012918.md  session_20251227_200829.md  session_20251227_201406.md  session_20251227_213137.md  session_20251227_213503.md  session_20251227_213540.md  session_20251227_213554.md  session_20251227_223357.md  session_20251227_230434.md  session_20251227_232102.md  session_20251227_233929.md  session_20251227_234204.md  session_20251227_234221.md  (+39 more)
projects/shared/drupal-editor-agent/: .env.example  README.md  SETUP.md  pyproject.toml
projects/shared/drupal-editor-agent/src/drupal_editor/: __init__.py  cli.py  client.py
projects/shared/drupal-editor-agent/src/drupal_editor/auth/: __init__.py  playwright.py  terminus.py
projects/shared/drupal-editor-agent/src/drupal_editor/operations/: __init__.py  media.py  nodes.py  taxonomy.py
projects/shared/drupal-editor-agent/src/drupal_editor/tracking/: __init__.py  changelog.py  summary.py
source-files-for-organizing/: [RIF] RIF Web Modernization & Future Readiness Proposal.txt  rif-web-modernization-video-script.txt  transcript-from-rag-secret-savas-skillshare.txt
